--- a/client/src/components/rightbar/rightbar.css
+++ b/client/src/components/rightbar/rightbar.css
@@ -1,3 +1,39 @@
 .rightbar {
-  flex: 3.5;
+  flex: 3.5; 
+}
+
+.rightbarWrapper {
+  padding: 20px 20px 0px 0px;
+}
+
+.birthdayContainer {
+  display: flex;
+  align-items: center;
+}
+
+.birthdayImg {
+  width: 40px;
+  height: 40px;
+  margin-right: 10px;
+}
+
+.birthdayText {
+  font-weight: 300;
+  font-size: 13px;
+}
+
+.rightbarAdd {
+  width: 100%;
+  border-radius: 10px;
+  margin: 20px 0;
+}
+
+.rightbarTitle {
+  margin-bottom: 20px;
+}
+
+.rightbarFriendList {
+  padding: 0;
+  margin: 0;
+  list-style: none;
 }
