--- a/client/src/components/share/share.css
+++ b/client/src/components/share/share.css
@@ -75,6 +75,11 @@
   font-size: 12px;
 }
 
+.shareButton:disabled {
+  opacity: 0.3;
+  cursor: default;
+}
+
 .shareImgContainer {
   padding: 0 20px 10px 20px;
   position: relative;
