--- a/client/src/components/sidebar/sidebar.css
+++ b/client/src/components/sidebar/sidebar.css
@@ -43,7 +43,14 @@
   border: none;
   padding: 10px;
   border-radius: 5px;
-  font-weight: 500;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 3px;
+  color: tomato;
+  font-size: 13px;
+  font-weight: 700;
+  cursor: pointer;
 }
 
 .sidebarHr {
